microservices/cargotracker/spring-boot/booking/deployment/deploymentconfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: booking
  name: booking
  namespace: <PROJECT>
spec:
  replicas: 1
  selector:
    deploymentconfig: booking
  strategy:
    activeDeadlineSeconds: 21600
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: booking
        deploymentconfig: booking       
    spec:
      containers:
      - image: <CONTAINER>
        imagePullPolicy: Always
        name: booking
        ports:
        - containerPort: 8001
          protocol: TCP
  test: false
  triggers:
  - imageChangeParams:
      automatic: true
      containerNames:
      - booking
      from:
        kind: ImageStreamTag
        name: booking:latest
        namespace: <PROJECT>
    type: ImageChange
  - type: ConfigChange
