microservices/cargotracker/spring-boot/booking/deployment/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app: booking
  name: booking
  namespace: booking
spec:
  host: booking-booking.apps.eu-3.os.fyre.ibm.com
  port:
    targetPort: 8001
  subdomain: ""
  to:
    kind: Service
    name: booking
    weight: 100
  wildcardPolicy: None
